tests/baselines/reference/nodeModulesPackagePatternExports(module=node20).errors.txt
node_modules/inner/index.d.ts(2,13): error TS2303: Circular definition of import alias 'cjs'.


==== index.ts (0 errors) ====
    // esm format file
    import * as cjsi from "inner/cjs/index";
    import * as mjsi from "inner/mjs/index";
    import * as typei from "inner/js/index";
    cjsi;
    mjsi;
    typei;
==== index.mts (0 errors) ====
    // esm format file
    import * as cjsi from "inner/cjs/index";
    import * as mjsi from "inner/mjs/index";
    import * as typei from "inner/js/index";
    cjsi;
    mjsi;
    typei;
==== index.cts (0 errors) ====
    // cjs format file
    import * as cjsi from "inner/cjs/index";
    import * as mjsi from "inner/mjs/index";
    import * as typei from "inner/js/index";
    cjsi;
    mjsi;
    typei;
==== node_modules/inner/index.d.ts (1 errors) ====
    // cjs format file
    import * as cjs from "inner/cjs/index";
                ~~~
!!! error TS2303: Circular definition of import alias 'cjs'.
    import * as mjs from "inner/mjs/index";
    import * as type from "inner/js/index";
    export { cjs };
    export { mjs };
    export { type };
==== node_modules/inner/index.d.mts (0 errors) ====
    // esm format file
    import * as cjs from "inner/cjs/index";
    import * as mjs from "inner/mjs/index";
    import * as type from "inner/js/index";
    export { cjs };
    export { mjs };
    export { type };
==== node_modules/inner/index.d.cts (0 errors) ====
    // cjs format file
    import * as cjs from "inner/cjs/index";
    import * as mjs from "inner/mjs/index";
    import * as type from "inner/js/index";
    export { cjs };
    export { mjs };
    export { type };
==== package.json (0 errors) ====
    {
        "name": "package",
        "private": true,
        "type": "module",
    }
==== node_modules/inner/package.json (0 errors) ====
    {
        "name": "inner",
        "private": true,
        "exports": {
            "./cjs/*": "./*.cjs",
            "./mjs/*": "./*.mjs",
            "./js/*": "./*.js"
        }
    }